# goph419-f2024-lab01-stSP

./: .gitignore  README.md  pyproject.toml
examples/: driver.py  example_functions01.py
src/: lab1sourcecode.py
src/lab01/: __init__.py  functions01.py
tests/: tests.py
